Implement getTemplate/{templateId} route and build basic templating
